harden bfs diagnostics.